tests/checker/fail/unknown_receiver_type.can
Described = String

Mystery => Described {
    "hello"
}

Unit => Program {
    "x" -> Described
    "ok" -> Print
}
